Kubernetes-Manifests/Deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: Maven-web-deployment 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template: 
    metadata: 
      labels:
        app: web 
    spec: 
      containers:
        - name: web-app-example 
          image: muralisocial123/maven-web-app:1.0
          ports: 
            - containerPort: 8080
