Kubernetes-Manifests/pod.yaml
apiVersion: v1 
kind: Pod 
metadata: 
  name: maven-web-pod 
  namespace: murali-ns
spec: 
  containers:
    - name: test-cont 
      image: muralisocial123/maven-web-app:1.0
      ports:
        - containerPort: 8080
    - name: maven-web-app 
      image: muralisocial123/flower-app:1.0
      ports:
        - containerPort: 3015
